# todui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: linter.yml  rust.yml
src/: main.rs
src/app/: context.rs  mod.rs
src/app/components/: mod.rs
src/app/components/containers/: about.rs  command.rs  editor.rs  menu.rs  mod.rs  modals.rs  projects.rs  tasks.rs
src/app/components/containers/body/: about.rs  mod.rs
src/app/components/containers/sidebar/: about.rs  menu.rs  mod.rs
src/app/components/layout/: body.rs  mod.rs  modal.rs  sidebar.rs
src/app/context/: editor.rs  mod.rs
src/app/context/editor/: field.rs  mod.rs
src/canvas/: mod.rs
src/controller/: actions.rs  key.rs  mod.rs  state.rs
src/model/: mod.rs  project.rs  task.rs
src/utils/: api.rs  canvas.rs  date.rs  log.rs  mod.rs  security.rs
src/view/: body.rs  context.rs  mod.rs  sidebar.rs
src/view/components/: body.rs  modal.rs  sidebar.rs
